@@ -1,3 +1,6 @@
+2010-12-14  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amidxtaped.pl: Don't crash if same-host doesn't match.
+
 2010-12-13  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Interactive.pm: rename finished_cb to request_cb.
 	* installcheck/Amanda_Recovery_Scan.pl,
